# panduza-app

./: .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  eslint.config.js  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  pre-commit.sh  prettier.config.mjs  rust-toolchain.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  format_lint.yml  release.yml  tauri-build.yml
doc/: windows_7.md
doc/ci/: panduza_gh_workflows.md  signing_gh.md
public/locales/en/: explorer.json  header.json
public/locales/fr/: about.json  explorer.json  header.json
scripts/: changelog_extract.sh  changelog_set.sh  pre-commit.sh
src/: App.css  App.tsx  HeaderStore.ts  LanguageStore.ts  Scanner.tsx  attribute.tsx  charts.d.ts  explorer.tsx  header.tsx  i18n.ts  main.tsx  platform.tsx  store.ts  structure.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  driver.rs  driver_manager.rs  lib.rs  main.rs  mqtt_handler.rs  pza.rs
src-tauri/src_old/: mqtt_manager.rs
src/ControlView/: AttributeListener.tsx  ControlView.tsx  HelperLines.tsx  NodeShell.tsx  UseControlViewStore.ts  UseCopyPasteCut.ts  UseHelperLines.ts  UseLockMechanism.tsx
src/ControlView/Nodes/: BooleanButtons.tsx  FileUploader.tsx  Graph.tsx  NumberDisplay.tsx  Repl.tsx  SiSpinner.tsx
src/app/: AppEvents.ts  HeaderStore.ts  LanguageStore.ts  attribute.tsx  client.tsx  control.tsx  driver.tsx  explorer.tsx  header.tsx  i18n.ts  layout.tsx  noder.tsx  page.tsx  platform.tsx  store.ts  structure.tsx  tree.tsx  tree_panel.tsx  treeview.tsx
src/app/ControlView/: AttributeListener.tsx  AttributeShell.tsx  ControlView.tsx  CopyPasteCut.ts  HelperLines.tsx  (+7 more)
src/pages/: scanner.tsx
src/styles/: fonts.tsx  globals.css
(+53 files in other folders)
