[package]
name = "panduza-app"
version = "0.1.0"
description = "Panduza App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = ["unstable"] }
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-dialog = "2.1.0"
tauri-plugin-log = "2.2.1"
tauri-plugin-store = "2.2.0"
rumqttc = "0.24.0"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
bytes = "1.9.0"
futures = "0.3.31"
thiserror = "2.0.11"
clap = { version = "4.5.27", features = ["derive"] }
