[package]
name = "panduza-app"
version = "0.2.0"
description = "Panduza App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = ["unstable"] }
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-dialog = "2.1.0"
tauri-plugin-store = "2.2.0"
rumqttc = "0.24.0"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
bytes = { version = "1.9.0", features = ["serde"] }
futures = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
